--- a/BJ_Cliente/Properties/Resources.resx
+++ b/BJ_Cliente/Properties/Resources.resx
@@ -121,11 +121,11 @@
   <data name="_2_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\2 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_7_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\7 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ace_of_spades2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ace_of_spades2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="FondoLadrillos" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\FondoLadrillos.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Rey_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Rey de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_5_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\5 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -133,11 +133,14 @@
   <data name="_5_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\5 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="FondoLadrillos" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FondoLadrillos.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Rey_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Rey de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_8_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\8 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Rey_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Rey de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_5_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\5 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -147,9 +150,6 @@
   </data>
   <data name="_6_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\6 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="_6_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\6 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_8_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\8 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -175,9 +175,6 @@
   <data name="Rey_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Rey de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_10_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\10 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="ace_of_spades" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ace_of_spades.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -186,12 +183,6 @@
   </data>
   <data name="As_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\As de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Rey_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Rey de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="_9_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\9 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_2_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\2 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -208,20 +199,14 @@
   <data name="Jack_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Jack de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_9_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\9 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="_3_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\3 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_3_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\3 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="As_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\As de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_3_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\3 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="_6_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\6 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_8_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\8 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_10_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\10 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -229,11 +214,11 @@
   <data name="_10_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\10 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Reina_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Reina de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_7_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\7 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Jack_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Jack de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_10_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\10 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_4_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\4 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -244,6 +229,9 @@
   <data name="Jack_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Jack de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="_2_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\2 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="_4_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\4 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -253,11 +241,17 @@
   <data name="Jack_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Jack de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_6_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\6 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Esperando" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Esperando.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="As_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\As de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_6_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\6 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_6_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\6 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_3_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_4_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\4 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -265,22 +259,31 @@
   <data name="Reina_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Reina de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Rey_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Rey de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Jack_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Jack de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Reina_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Reina de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_6_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\6 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Reina_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Reina de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_3_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\3 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_2_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\2 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Reina_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Reina de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ace_of_spades2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ace_of_spades2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_9_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\9 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Esperando" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Esperando.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_3_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_9_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\9 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Tablero" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Tablero.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
