--- a/BJ_Cliente/Properties/Resources.resx
+++ b/BJ_Cliente/Properties/Resources.resx
@@ -121,8 +121,8 @@
   <data name="_2_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\2 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ace_of_spades2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ace_of_spades2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Jack_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Jack de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Rey_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Rey de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -139,8 +139,8 @@
   <data name="Rey_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Rey de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Rey_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Rey de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_8_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\8 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_5_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\5 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -150,6 +150,9 @@
   </data>
   <data name="_6_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\6 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Tablero" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Tablero.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_8_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\8 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -166,8 +169,8 @@
   <data name="_10_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\10 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_7_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\7 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Esperando" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Esperando.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_8_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\8 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -193,20 +196,29 @@
   <data name="_5_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\5 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="_3_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="_4_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\4 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Jack_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Jack de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="_9_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\9 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="_3_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\3 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="As_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\As de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_3_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_8_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\8 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_7_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\7 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_6_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\6 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_10_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\10 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -226,11 +238,8 @@
   <data name="_8_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\8 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Jack_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Jack de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="_2_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\2 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Rey_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Rey de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_4_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\4 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -241,20 +250,14 @@
   <data name="Jack_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Jack de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Esperando" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Esperando.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="_6_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\6 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="_6_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\6 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_3_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\3 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="As_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\As de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_4_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\4 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_9_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\9 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Reina_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Reina de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -268,22 +271,22 @@
   <data name="Reina_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Reina de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_3_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\3 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_2_de_treboles" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\2 de treboles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Reina_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Reina de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_9_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\9 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_3_de_picas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3 de picas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_3_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\3 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ace_of_spades2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ace_of_spades2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_9_de_corazones" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\9 de corazones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_4_de_diamantes" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\4 de diamantes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Tablero" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Tablero.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Tablero_desactivado" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Tablero_desactivado.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
